color-change-style

--- a/css/colors.css
+++ b/css/colors.css
@@ -1,6 +1,6 @@
-:root{
-    --primary-color: #eeb868;
-    --primary-color-dark: #ef8354;
-    --secundary-color: #32746d;
-    --secundary-color-dark: #35605A;
+:root {
+    --secundary-color: #775a77;
+    --secundary-color-dark: #5d465d;
+    --primary-color: #e79bb2;
+    --primary-color-dark: #C42160;
 }
