--- a/css/common.css
+++ b/css/common.css
@@ -7,11 +7,14 @@ html, body{
     margin: 0;
     padding: 0;
     font-family:"NunitoSans-Regular", Arial, Helvetica, sans-serif;
-    background-image: url('../img/bg.jpg');
-    background-size: cover; 
-    background-position: center; 
     height: 100%;
+    background: linear-gradient(to bottom, #ffffff, #f2f2f2); /* Gradiente blanco a gris */
+    overflow-y: auto; /* Permitimos el desplazamiento vertical si es necesario */
+    position: relative; /* Agregado para utilizar pseudo-elemento */
 }
+
+
+
 
 #container{
     max-width: 1200px;
