--- a/css/stands.css
+++ b/css/stands.css
@@ -9,12 +9,11 @@
     width: calc(100% - 315px);
     gap: 30px;
     position: relative;
-    background: white;
     padding: 20px 35px;
-    box-shadow: 0 2px 3px rgba(100, 100, 100, 0.5);
+    box-shadow: 0px 0px 3px rgba(100, 100, 100, 0.5);
     
     border-radius: 5px;
-
+    min-height: 100%;
     
 }
 
@@ -36,7 +35,7 @@
     min-height: 100%; 
     border-radius: 10px;
     padding: 10px;
-    box-shadow: 0 3px 15px rgba(100, 100, 100, 0.5);
+    box-shadow: 0 0px 3px rgba(100, 100, 100, 0.5);
     box-sizing: border-box;
     background: white;
     transition: opacity 0.9s;
