--- a/css/colors.css
+++ b/css/colors.css
@@ -1,5 +1,5 @@
 :root {
-    --secundary-color: #775a77;
+    --secundary-color: #841879;
     --secundary-color-dark: #5d465d;
     --primary-color: #e79bb2;
     --primary-color-dark: #C42160;
