--- a/css/fonts.css
+++ b/css/fonts.css
@@ -7,3 +7,8 @@
     font-family: "NunitoSans-Bold";
     src: url("../fonts/NunitoSans-Bold.ttf");
 }
+
+@font-face {
+    font-family: "fontAwesome";
+    src: url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css");
+}
