--- a/css/aside.css
+++ b/css/aside.css
@@ -1,7 +1,6 @@
 aside{
     float: left;
     width: 300px;
-    height: 100%;
     box-sizing: border-box;
     margin-top: 10px;
     border: solid 1px #ccc;
@@ -101,6 +100,7 @@ aside h3{
 @media(max-width: 700px){
     aside{
         width: 100%;
+        height: auto;
     }
 
 }
