--- a/css/common.css
+++ b/css/common.css
@@ -13,6 +13,34 @@ html, body{
 
 }
 
+#spinner{
+    border: 4px solid rgba(0,0,0,.1);
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    border-left-color: var(--primary-color-dark);
+
+    animation: spin 1s linear infinite;
+}
+
+#spinner-container {
+    grid-column: span 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@keyframes spin {
+    0%{
+        transform: rotate(0deg);
+    }
+
+    100%{
+        transform: rotate(360deg);
+    }
+    
+}
+
 
 
 
