--- a/css/stands.css
+++ b/css/stands.css
@@ -13,8 +13,9 @@
     box-shadow: 0px 0px 3px rgba(100, 100, 100, 0.5);
     border-radius: 5px;
     min-height: 100%;
-    
+    position: relative; /* Añadimos position relative */
 }
+
 
 .img-container{
     background-repeat: no-repeat;
