--- a/css/common.css
+++ b/css/common.css
@@ -13,7 +13,7 @@ html, body{
 
 }
 
-#spinner{
+.spinner{
     border: 4px solid rgba(0,0,0,.1);
     width: 50px;
     height: 50px;
@@ -23,7 +23,7 @@ html, body{
     animation: spin 1s linear infinite;
 }
 
-#spinner-container {
+.spinner-container {
     grid-column: span 3;
     display: flex;
     justify-content: center;
