--- a/css/stands.css
+++ b/css/stands.css
@@ -1,6 +1,4 @@
-
-
-.stand-container{
+.stand-container {
     float: right;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
@@ -13,26 +11,67 @@
     box-shadow: 0px 0px 3px rgba(100, 100, 100, 0.5);
     border-radius: 5px;
     min-height: 100%;
-    position: relative; /* Añadimos position relative */
+    position: relative;
+}
+
+.txt-container {
+    width: 100%;
+    grid-column: 1/-1;
+}
+
+.txt-container h2{
+    color: var(--primary-color-dark);
+    font-size: 40px;
+}
+
+.txt-container h3{
+    color: var(--primary-color-dark);
+    font-size: 30px;
+    margin-top: 15px;
+    text-align: left;
+}
+
+.txt-container p{
+    color: var(--secundary-color);
+    font-size: 25px;
+    margin-top: 15px;
+    text-align: left;
+    font-weight: bold;
+    
+}
+
+.link-container{
+    margin: 30px;
+    border: 2px solid #000;
+    display: inline-block;
+    box-shadow: 5px 5px 5px #ccc;
+}
+
+.link-container p{
+    margin-top: none;
+    padding: 30px;
+    margin-top: 0px;
 }
 
 
-.img-container{
+
+.img-container {
     background-repeat: no-repeat;
     background-position: center;
     margin-top: 20px;
 }
 
-.img-container img{
+.img-container img {
     width: 150px;
 }
 
 
 
 
-.stand-block, .stand-block-back{
+.stand-block,
+.stand-block-back {
     width: 100%;
-    min-height: 100%; 
+    min-height: 100%;
     border-radius: 10px;
     padding: 10px;
     box-shadow: 0 0px 3px rgba(100, 100, 100, 0.5);
@@ -46,71 +85,70 @@
     top: 0%;
 }
 
-.stand-block{
+.stand-block {
     position: relative;
-    z-index: 1; 
+    z-index: 1;
 }
 
-.stand-block-back p{
+.stand-block-back p {
     color: var(--secundary-color-dark);
     margin-bottom: 0;
     margin-top: 0;
-    
+
 }
 
-.stand-block-back h3{
+.stand-block-back h3 {
     color: var(--primary-color-dark);
     margin-bottom: 0;
     margin-top: 10px;
-    
+
 }
 
-.stand-block-back ul li a{
+.stand-block-back ul li a {
     color: rgb(153, 43, 173);
 }
 
 
-.card-container{
+.card-container {
     position: relative;
     text-align: center;
     width: 248px;
     height: auto;
 }
 
-.name{
+.name {
     font-size: 1.2rem;
 }
 
 .flip-card:hover .stand-block {
-    opacity: 0; 
-    z-index: 0; 
+    opacity: 0;
+    z-index: 0;
 }
 
 .flip-card:hover .stand-block-back {
-    opacity: 1; 
-    z-index: 0; 
+    opacity: 1;
+    z-index: 0;
 }
 
-@media(max-width: 700px){
-    
-    .stand-container{
+@media(max-width: 700px) {
+
+    .stand-container {
         grid-template-columns: 1fr;
         width: 100%;
     }
 
-    .card-container{
+    .card-container {
         width: 100%;
     }
 
-    .stand-block{
+    .stand-block {
         margin-left: auto;
         margin-right: auto;
     }
 
-    .stand-block{
+    .stand-block {
         width: auto;
         height: auto;
     }
-    
-}
 
+}
