--- a/css/stands.css
+++ b/css/stands.css
@@ -42,8 +42,8 @@
 
 .link-container{
     margin: 30px;
-    border: 2px solid #000;
-    display: inline-block;
+    border: .3px solid #000;
+    display:inline-flex;
     box-shadow: 5px 5px 5px #ccc;
 }
 
@@ -52,6 +52,24 @@
     padding: 30px;
     margin-top: 0px;
 }
+
+.link-container button{
+    width: 50px;
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.link-container button::before{
+    font-family: "fontAwesome";
+    content: '\f328';
+    background: none;
+    font-size: 20px;
+}
+
+
 
 
 
