--- a/css/stands.css
+++ b/css/stands.css
@@ -51,6 +51,8 @@
     margin-top: none;
     padding: 30px;
     margin-top: 0px;
+    background-color: #131132;
+    color: #48913c;
 }
 
 .link-container button{
