--- a/css/stands.css
+++ b/css/stands.css
@@ -40,13 +40,50 @@
     
 }
 
+.link-container{
+    color: #d4d4d4;
+    margin: 30px;
+    border: .3px solid #000;
+    border-radius: 5px;
+    display:inline-flex;
+    box-shadow: 5px 5px 5px #ccc;
+    font-family: 'Courier New', Courier, monospace;
+    padding: 10px;
+}
+
+.link-container p{
+    font-size: 17px;
+}
+
+.link-container p{
+    margin-top: none;
+    padding: 30px;
+    margin-top: 0px;
+}
+
+.link-container button{
+    width: 50px;
+    appearance: none;
+    -webkit-appearance: none;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
+
+.link-container button::before{
+    font-family: "fontAwesome";
+    content: '\f328';
+    background: none;
+    font-size: 20px;
+}
+
+
 .code-container{
     overflow-x: auto;
     color: #d4d4d4;
     margin: 30px;
     border: .3px solid #000;
     border-radius: 5px;
-    display:inline-flex;
     box-shadow: 5px 5px 5px #ccc;
     font-family: 'Courier New', Courier, monospace;
     padding: 10px;
@@ -89,19 +126,11 @@
 }
 
 .code-container p{
-    margin-top: none;
     padding: 30px;
     margin-top: 0px;
 }
 
-.code-container button{
-    width: 50px;
-    appearance: none;
-    -webkit-appearance: none;
-    border: none;
-    background: none;
-    cursor: pointer;
-}
+
 
 .code-container button::before{
     font-family: "fontAwesome";
