--- a/css/main-menu.css
+++ b/css/main-menu.css
@@ -12,11 +12,12 @@
 }
 
 
+
 #main-menu > ul > li{
 margin: 10px 0px;
 float: none; 
 display: inline-block; 
-position: relative; /* Agregado */
+position: relative; 
 }
 
 #main-menu > ul > li > a{
