--- a/css/common.css
+++ b/css/common.css
@@ -13,33 +13,33 @@ html, body{
 
 }
 
-.spinner{
-    border: 4px solid rgba(0,0,0,.1);
+.spinner-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%; /* Ocupa todo el ancho del contenedor padre */
+    height: 100%; /* Ocupa todo el alto del contenedor padre */
+    position: relative; /* Posiciona el contenedor del spinner respecto a su contenedor padre */
+}
+
+.spinner {
+    border: 4px solid rgba(0, 0, 0, 0.1);
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border-left-color: var(--primary-color-dark);
-
     animation: spin 1s linear infinite;
 }
 
-.spinner-container {
-    grid-column: span 3;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
 @keyframes spin {
-    0%{
+    0% {
         transform: rotate(0deg);
     }
-
-    100%{
+    100% {
         transform: rotate(360deg);
     }
-    
 }
+
 
 
 
