--- a/css/common.css
+++ b/css/common.css
@@ -14,20 +14,21 @@ html, body{
 }
 
 .spinner{
-    border: 4px solid rgba(0,0,0,.1);
+    border: 4px solid rgba(0, 0, 0, 0.1);
     width: 50px;
     height: 50px;
     border-radius: 50%;
     border-left-color: var(--primary-color-dark);
-
     animation: spin 1s linear infinite;
 }
 
 .spinner-container {
-    grid-column: span 3;
     display: flex;
     justify-content: center;
     align-items: center;
+    width: 100%; 
+    height: 100%; 
+    position: relative; 
 }
 
 @keyframes spin {
